# wall-climber

./: .gitignore  LICENSE  README.md  controller.py  listener.py  main.py  motors.py  package.xml  requirements.txt  robot.py  setup.py  teleop.py  transition.py
config/: microstrain_inertial_params.yml
launch/: wc_nopxrf.launch  wc_nopxrf.launch.py  wc_nopxrf_py.py  wc_pxrf.launch
sally_description/: CMakeLists.txt  README.md  package.xml
sally_description/config/: joint_names_sally_original_current.yaml
sally_description/launch/: display.py
sally_description/meshes/: left_drive_1.STL  left_drive_3.STL  left_rocker.STL  left_steer_1.STL  left_steer_3.STL  right_drive_2.STL  right_drive_4.STL  right_rocker.STL  right_steer_2.STL  right_steer_4.STL
sally_description/rviz/: display.rviz
sally_description/urdf/: sally.urdf.xacro  sally_original.csv
wall_climber/: CMakeLists.txt  README.md  controller.py  listener.py  main.py  motors.py  package.xml  robot.py  setup.cfg  setup.py  teleop.py  transition.py
wall_climber/launch/: wc_nopxrf.launch.py
wall_climber/rviz/: sally.rviz
wall_climber/wall_climber/: listener.py  main.py  robot.py  teleop.py
